--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>kjmjh(runoob.com)</title>
+<title>kj23和mjh的小站</title>
 </head>
 <body>
- <h1>hi</h1>
+ <h1 align=:"center">hi!</h1>
+<h1 align=:"center">这里是kj23和mjh的网站</h1>
+  <marquee>目前还没有项目</marquee>
+<a href=:"http://tjy-gitnub.github.io">星源（别人的网站）</a>
+<div align=:"center">作者邮箱:18369898058@163.com</div>
