--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>kj23和mjh的小站</title>
 </head>
 <body>
- <h1 align="center">hi!</h1>
-<h1 align="center">这里是kj23和mjh的网站</h1>
+ <h1 style="text-align:center">hi!</h1>
+<h1 style="text-align:center">这里是kj23和mjh的网站</h1>
   <marquee>目前还没有项目</marquee>
 <a href=:"http://tjy-gitnub.github.io">星源（别人的网站）</a>
-<div align="center">作者邮箱:18369898058@163.com</div>
+<div style="text-align:center">作者邮箱:18369898058@163.com</div>
