--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
  <h1 style="text-align:center">hi!</h1>
 <h1 style="text-align:center">这里是kj23和mjh的网站</h1>
   <marquee>目前还没有项目</marquee>
-<a href=:"https://tjy-gitnub.github.io/">星源（别人的网站）</a>
+<a href=:"https://tjy-gitnub.github.io/">星源（别人的网站,如无法加载请手动输入https://tjy-gitnub.github.io/）</a>
 <div style="text-align:center">作者邮箱:18369898058@163.com</div>
+<h2 style="text-align:center">下一个项目:暗区突围重制版</h2>
