--- a/index.html
+++ b/index.html
@@ -11,3 +11,40 @@
 <a href=:"https://tjy-gitnub.github.io/">星源（别人的网站,如无法加载请手动输入https://tjy-gitnub.github.io/）</a>
 <div style="text-align:center">作者邮箱:18369898058@163.com</div>
 <h2 style="text-align:center">下一个项目:暗区突围重制版</h2>
+
+<div class="box card jt" style="--speed:5;width: 50%;margin-left: 25%;margin-top: var(--ph);backdrop-filter: none;background-color: #282828 !important;">
+        <p class="tit"><span class="shine" style="--color:#2374b7;--colorshine:#76cfff;--speed:4;">语言</span><span class="eng">Be proficient in many languages</span></p>
+        <div class="body">
+            <div><p style="margin: 0;">Scratch</p>
+                <div><div><div style="background: #ffab19;width: 99%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Markdown</p>
+                <div><div><div style="background: #bebebe;width: 85%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">CSS</p>
+                <div><div><div style="background: #4061e8;width: 78%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Html</p>
+                <div><div><div style="background: #d66022;width: 70%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Python</p>
+                <div><div><div style="background: #4db8a6;width: 52%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Javascript</p>
+                <div><div><div style="background: #e9c900;width: 46%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">C++</p>
+                <div><div><div style="background: #6c94c9;width: 42%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Cmd</p>
+                <div><div><div style="background: #aaaaaa;width: 40%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">C#</p>
+                <div><div><div style="background: #64047f;width: 30%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Vbs</p>
+                <div><div><div style="background: #a2e0ff;width: 8%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
+            <div><p style="margin: 0;">Powershell</p>
+                <div><div><div style="background: #3e6dbf;width: 7%;height: 100%;border-radius: 10px;"
+                    class="highlight width"></div></div></div></div>
