--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>kj23和mjh的小站</title>
 </head>
 <body>
+ background="https://img2.baidu.com/it/u=1045975478,3769453748&fm=253&fmt=auto?w=1280&h=800">
  <h1 style="text-align:center">hi!</h1>
 <h1 style="text-align:center">这里是kj23和mjh的网站</h1>
   <marquee>目前还没有项目</marquee>
