--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }, 10000);
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
-<body background="https://img2.baidu.com/it/u=1045975478,3769453748&fm=253&fmt=auto?w=1280&h=800">
+<body background="https://img1.baidu.com/it/u=3412894563,205250486&fm=253&fmt=auto&app=138&f=JPEG?w=788&h=500">
 
  <h1 style="text-align:center">hi!</h1>
 <h1 style="text-align:center">这里是kj23和mjh的网站</h1>
