--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
 <body background="https://img1.baidu.com/it/u=3412894563,205250486&fm=253&fmt=auto&app=138&f=JPEG?w=788&h=500">
-
- <h1 style="text-align:center">hi!</h1>
-<h1 style="text-align:center">这里是kj23和mjh的网站</h1>
-  <marquee>目前还没有项目</marquee>
-<div style="text=-align:center">
-<a href=:"https://tjy-gitnub.github.io/">星源（别人的网站,如无法加载请手动输入https://tjy-gitnub.github.io/）</a></div>
+<div style="text-align:center">
+ <h1 style="font-family:宋体;color:white">hi!</h1>
+<h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
+<a href=:"https://tjy-gitnub.github.io/">星源（别人的网站,如无法加载请手动输入https://tjy-gitnub.github.io/）</a>
 <div style="text-align:center">作者邮箱:18369898058@163.com</div>
 <h2 style="text-align:center">下一个项目:暗区突围重制版</h2>
