--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
         }, 10000);
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
-<body style="background-image: url(https://img2.baidu.com/it/u=3212924398,1865371287&fm=253&fmt=auto?w=1280&h=800);
-
-background-size: 100% ;
-
-background-attachment: fixed;" >
+<body background="https://img2.baidu.com/it/u=3212924398,1865371287&fm=253&fmt=auto?w=1280&h=800">
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
