--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Hi,terribly nice to meet you!</p>
     <script>setTimeout(()=>{document.getElementById('loadbacktext').style.opacity=1;document.getElementById('loadbacktexteng').style.opacity = 1;},100);
         setTimeout(()=>{document.getElementById('loadbacktext').style.opacity=0;document.getElementById('loadbacktexteng').style.opacity = 0;},2100);
-        setTimeout(()=>{document.getElementById('loadbacktext').innerText = '与君初相识，犹如故人归。欢迎来到星源的网站';
+        setTimeout(()=>{document.getElementById('loadbacktext').innerText = '与君初相识，犹如故人归。欢迎来到kj23和mjh的网站的网站';
         document.getElementById('loadbacktexteng').innerText='Meeting you first time is like seeing an old friend.Welcome to Starry Source\'s website.'
         document.getElementById('loadbacktext').style.opacity = 1;document.getElementById('loadbacktexteng').style.opacity=1;},4100);
         let zh_ms=['海内存知己,天涯若比邻,正在加载请稍等...','有朋自远方来,不亦乐乎,欢迎!','君问归期未有期,巴山夜雨涨秋池,请耐心等待',
@@ -41,3 +41,9 @@
 <h3 style="font-family:宋体;color:white">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
 <h2 style="font-family:宋体;color:white">下一个项目:暗区突围重制版</h2>
+
+<form name="input"http://kjmjh.github.io" method="get">
+用户名：
+<input type="text" name="user" />
+<input type="submit" value="提交" />
+</form>
