--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div style="text-align:center">
 <h2 style="font-family:宋体;color:white">下一个项目:暗区突围重制版</h2>
 
-<form name="input"http://kjmjh.github.io" method="get">
+<form name="input"http://kj23.github.io" method="get">
 用户名：
 <input type="text" name="user" />
 <input type="submit" value="提交" />
