--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
         }, 10000);
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
-<body background="https://img2.baidu.com/it/u=3212924398,1865371287&fm=253&fmt=auto?w=1280&h=800">
+
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="videocontainer">
+        <video autoplay muted loop id="bgVideo">
+            <source src="yourvideofile.mp4" type="video/mp4">
+            您的浏览器不支持HTML5视频。
+        </video>
+    </div>
+    <!页面其他内容 >
+    <script src="scripts.js"></script>
+</body>
+</html>
+
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
