--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
         }, 10000);
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
-
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="gradientbackground">
+        <!在这里添加你的内容 >
+    </div>
+</body>
+</html>
 
 
 <div style="text-align:center">
