--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
-<link rel="stylesheet" href="styles.css">
+
+<style>
+body {
+  background: linear-gradient(to right, red , yellow);
+}
+</style>
 </head>
+
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
