--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=devicewidth, initialscale=1.0">
 <title>kj23和mjh的小站</title>
-
-<style>
-body {
-  background: linear-gradient(to right, red , yellow);
-}
-</style>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
