--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=devicewidth, initialscale=1.0">
 <title>kj23和mjh的小站</title>
     <link rel="stylesheet" href="styles.css">
 </head>
