--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
 
+<style type="text/css"> 
+.linear{ 
+width:100%; 
+height:600px; 
+FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=0,startColorStr=##15A216,endColorStr=#fafafa); /*IE*/ 
+background:-moz-linear-gradient(top,#15A216,#fafafa);/*火狐*/ 
+background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#15A216), to(#fafafa));/*谷歌*/ 
+background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #15A216),color-stop(1, #fafafa));/* Safari & Chrome*/ 
+filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#15A216', endColorstr='#fafafa'); /*IE6 & IE7*/ 
+-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#15A216', endColorstr='#fafafa')"; /* IE8 */ 
+} 
+</style> 
+</head> 
+<body> 
+<div class="linear"></div> 
+</body> 
+</html>
+
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
