--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
 
-<body style="background-p_w_picpath: url"https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500"; background-repeat:no-repeat;">
+<body style="background-p_w_picpath: url（https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500）; background-repeat:no-repeat;">
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
