--- a/index.html
+++ b/index.html
@@ -35,9 +35,16 @@
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
 
-<style>
-body{background: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500) no-repeat;background-size:100% 100%;background-attachment:fixed;}
-</style>
+html,body{
+    width: 100%;
+    height: 100%;
+}
+.mui-content{
+    background: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500) bottom center no-repeat #efeff4 ;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+}
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
