--- a/index.html
+++ b/index.html
@@ -34,17 +34,7 @@
         }, 10000);
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
-
-html,body{
-    width: 100%;
-    height: 100%;
-}
-.mui-content{
-    background: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500) bottom center no-repeat #efeff4 ;
-    background-size: 100% 100%;
-    width: 100%;
-    height: 100%;
-}
+<link rel="stylesheet"href="styles.css">
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
