--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }, 10000);
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
-<body style="background:url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500); background-repeat:no-repeat;">
+<body background="https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500">
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
@@ -50,4 +50,3 @@
 </form>
 <div style="text-align:center">（注:如网页刷新代表提交成功）
 
-x
