--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
 <style>
-        body {
-            backgroundimage: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500); 
-            backgroundsize: cover; 
-        }
-    </style>
+    .bgimage {
+      backgroundimage: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500);
+      backgroundsize: 100 100； 
+      width: 100%; 
+      height: 100%; 
+    }
+  </style>
+</head>
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">hi!</h1>
