--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <style>
     .bgimage {
       backgroundimage: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500);
-      backgroundsize: 100 100； 
+      backgroundsize:； 
       width: 100%; 
       height: 100%; 
     }
