--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
 
+<div id="loadback" style="background-color:#000;width:100%;height:100%;z-index:105;position:absolute;transition:200ms;cursor: none;/*加载界面隐藏鼠标指针*/">
+		<style>
+			#loadback.hide {
+				opacity: 0;
+			}
+			loading>svg>circle:last-child {
+				stroke: #fff;
+				fill: none;
+				stroke-width: 2px;
+				stroke-linecap: round;
+				animation: spin-infinite 2.5s linear 0s infinite normal none running;
+				transform-origin: 50% 50%;
+				transition: all .2s ease-in-out 0s;
+			}
+			loading>svg {
+				background-color: #00000000;
+				border-radius: 50%;
+			}
+			@keyframes spin-infinite {
+				0% {
+					stroke-dasharray: .01px, 43.97px;
+					transform: rotate(0deg)
+				}
+				50% {
+					stroke-dasharray: 21.99px, 21.99px;
+					transform: rotate(450deg)
+				}
+				to {
+					stroke-dasharray: .01px, 43.97px;
+					transform: rotate(3turn)
+				}
+			}
+		</style>
+
 <body><div id="loadback" style="background-color:#000;width:100%;height:100%;z-index:105;position:fixed;transition:10s;top:0;left:0;color: #d2d2d2;">
     <p id="loadbacktext" style="width:100%;position:absolute;left:0;font-size:50px;transition:1s;height:100px;top:calc(50% - 80px);text-align:center;opacity:0;margin:0;">
         嗨,别来无恙啊!</p>
