--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
 <h3 style="font-family:宋体;color:white">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
-<h2 style="font-family:宋体;color:white">在下面啦</h2>
+<h2 style="font-family:宋体;color:white">开发中……</h2>
 
 <form name="input"http://kj23.github.io" method="get">
 用户名：
