--- a/fuyei.html
+++ b/fuyei.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>kj23和mjh的小站</title>
+<title>我(们)的项目</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         html {
@@ -87,7 +87,7 @@
             transition: max-height 0.3s ease;
             transition: all 0.3s ease;
             background: rgba(255, 255, 255, 0.626);
-            color: #000;
+            color: #87CEEB;
             text-decoration: none;
         }
 
