--- a/fuyei.html
+++ b/fuyei.html
@@ -48,7 +48,7 @@
         .project-card:hover {
             transform: scale(1.05);
             transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.626);
+            background: rgba(0,225,225);
         }
 
         .additional-info {
