--- a/fuyei.html
+++ b/fuyei.html
@@ -125,11 +125,10 @@
 <body>
     <div class="container">
         <div class="project-card" onclick="toggleCard(this)">
-            <h3>Windows 12 网页版</h3>
-            <p>使用 HTML、CSS、JS，在网络上模拟、创新操作系统。</p>
+            <h3>暂无项目</h3>
+            <p>点什么，没东西!😡</p>
             <div class="additional-info">
-                <p>开发者：谭景元、我、782</p>
-                <a class="button" href="https://github.com/tjy-gitnub/win12">项目链接</a>
+                <p>项目都没有，要什么开发者</p>
             </div>
     </div>
     <!-- 添加更多项目卡片 -->
