--- a/index.html
+++ b/index.html
@@ -53,6 +53,4 @@
 <div style="text-align:center">（注:如网页刷新代表提交成功）
 <div style="text-align:center">
 <hr/>
-<h1 style="font-family:宋体;color:white">以下是马文康的仓库</h1>
- <i>机密文件×14</i>
-<hr/>
+<a class="button" href="https://kjmjh.github.io/fuyei.html">我（们）的项目</a>
