--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div style="text-align:center">
 <h2 style="font-family:宋体;color:white">开发中……</h2>
 
-<form name="input"http://kj23.github.io" method="get">
+<form name="input"http://kjmjh.github.io/zhuce.html" method="get">
 用户名：
 <input type="text" name="user" />
 <input type="submit" value="提交" />
