--- a/index.html
+++ b/index.html
@@ -53,4 +53,4 @@
 <div style="text-align:center">（注:如网页刷新代表提交成功）
 <div style="text-align:center">
 <hr/>
-<a class="button" href="https://kjmjh.github.io/fuyei.html";text-decoration:none;>我（们）的项目</a>
+<a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
