--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
     </div>
     <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="chaolianjie.css">
 </head>
 <body>
 
