--- a/index.html
+++ b/index.html
@@ -55,3 +55,4 @@
 <div style="text-align:center">
 <hr/>
 <a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
+<a href="https://kjmjh.github.io/jeishao.html" litle="自我介绍">自我介绍</a>
