--- a/index.html
+++ b/index.html
@@ -56,4 +56,4 @@
 <hr/>
 <a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
 <br/>
-<a href="https://kjmjh.github.io/jeishao.html" litle="自我介绍">自我介绍</a>
+<a href="https://kjmjh.github.io/jieshao.html" litle="自我介绍">自我介绍</a>
