--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <h3 style="font-family:宋体;color:white">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
 <h2 style="font-family:宋体;color:white">开发中……</h2>
-<s style="text-align:center">唱🎤跳🤺rap🎙篮球🏀!</s>
+<div style="text-align:center">
+<s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
 <hr/>
 <a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
