--- a/shebeijiance.html
+++ b/shebeijiance.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>设备状态检测</title>
-
 <body><div id="loadback" style="background-color:#000;width:100%;height:100%;z-index:105;position:fixed;transition:10s;top:0;left:0;color: #d2d2d2;">
     <p id="loadbacktext" style="width:100%;position:absolute;left:0;font-size:50px;transition:1s;height:100px;top:calc(50% - 80px);text-align:center;opacity:0;margin:0;">
-        嗨,别来无恙啊!</p>
+        嗨,别来无恙啊!,您的设备状态是……</p>
     <p id="loadbacktexteng" style="width:100%;position:absolute;left:0;font-size:25px;transition:1s;height:50px;top:50%;text-align:center;opacity:0;margin:0;">
         Hi,terribly nice to meet you!</p>
     <script>setTimeout(()=>{document.getElementById('loadbacktext').style.opacity=1;document.getElementById('loadbacktexteng').style.opacity = 1;},100);
@@ -14,3 +13,26 @@
         setTimeout(()=>{document.getElementById('loadbacktext').innerText = '与君初相识，犹如故人归。欢迎来到kj23的网站';
         document.getElementById('loadbacktexteng').innerText='Meeting you first time is like seeing an old friend.Welcome to Starry Source\'s website.'
         document.getElementById('loadbacktext').style.opacity = 1;document.getElementById('loadbacktexteng').style.opacity=1;},4100);
+        let zh_ms=['海内存知己,天涯若比邻,正在加载请稍等...','有朋自远方来,不亦乐乎,欢迎!','君问归期未有期,巴山夜雨涨秋池,请耐心等待',
+        '无可奈何花落去,似曾相识燕归来,页面马上加载出来',
+        // '十年生死两茫茫,等待总是有结果的,请耐心',
+        '盈缩之期,不但在天;养怡之福,可得永年。正在努力加载','遗民泪尽胡尘里,南望王师又一年,你的网络太慢了',
+        '让我们再来一次吧'];let en_ms=['Wherever you are,friendship never chenge.Page is loading...','Meeting friends is very happy.Welcome!',
+        'Your returning date hasn\'t decided,rain rises the pond.Please wait','Flowers fall helplessly,the swallow return again,Page coming soon',
+        // 'Ten yaers,the distance between life and death.Please wait patiently',
+        'The length of life is not just decided by god.Loading hard...',
+        'Loyalists crying in Hun\'s territory,year after year.The network is too slow.','Let\'s do it again'];
+        let c=-1;
+        let bcci = setInterval(() => {
+            document.getElementById('loadbacktext').style.opacity=0;document.getElementById('loadbacktexteng').style.opacity =0;
+            setTimeout(() => {c++; document.getElementById('loadbacktext').innerText = zh_ms[c % 7];
+                document.getElementById('loadbacktexteng').innerText = en_ms[c % 7];
+                document.getElementById('loadbacktext').style.opacity=1;document.getElementById('loadbacktexteng').style.opacity = 1;
+            }, 1000);document.getElementById('loadback').style.backgroundColor = '#003561';
+            setTimeout(()=>{document.getElementById('loadback').style.backgroundColor = '#000';}, 5000);
+        }, 10000);
+        document.body.onload=()=>{ document.getElementById('loadback').style.opacity=0;setTimeout(()=>{document.getElementById('loadback').style.display='none';},3000); clearInterval(bcci)};</script>
+    </div>
+<body background-color:black>
+<div style="text-align:center">
+<h1 style="front-family:white">开机中!</h1>
