--- a/fuyei.html
+++ b/fuyei.html
@@ -125,10 +125,11 @@
 <body>
     <div class="container">
         <div class="project-card" onclick="toggleCard(this)">
-            <h3>暂无项目</h3>
-            <p>点什么，没东西!😡</p>
+            <h3>设备状态检测</h3>
+            <p>没什么卵用</p>
             <div class="additional-info">
-                <p>项目都没有，要什么开发者</p>
+                <p>开发者:我自己</p>
+               <a class="button" href="https://kjmjh.github.io/shebeijiance.html">项目链接</a>
             </div>
     </div>
     <!-- 添加更多项目卡片 -->
