--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <div class="loading">
 <span>拼命加载中</span>
+</body>
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">Hi!</h1>
