--- a/xm2.html
+++ b/xm2.html
@@ -4,5 +4,6 @@
 <meta charset="utf-8">
 <title>测试项目</title>
 <link rel="stylesheet" href="jiazaitubiao.css">
+<body style="background-color:black;">
 <div class="loading">
 <span>拼命加载中</span>
