--- a/fuyei.html
+++ b/fuyei.html
@@ -131,6 +131,13 @@
                 <p>开发者:我自己</p>
                <a class="button" href="https://kjmjh.github.io/shebeijiance.html">项目链接</a>
             </div>
+            <div class="project-card" onclick="toggleCard(this)">
+            <h3>测试项目</h3>
+            <p>只做出了加载图标</p>
+            <div class="additional-info">
+                <p>开发者:我自己</p>
+               <a class="button" href="http://kjmjh.github.io/xm2.html">项目链接</a>
+            </div>
     </div>
     <!-- 添加更多项目卡片 -->
     <script>
