--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="chaolianji.css">
+<link rel="stylesheet" href="shuipingxian.css">
 
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">Hi!</h1>
