--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div style="text-align:center">
 <s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
-<hr color="#0066ff" align="center" size="2" width="600"/>
+<hr color="#00ffff" align="center" size="2" width="600"/>
 <a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
 <br/>
 <a href="https://kjmjh.github.io/jieshao.html" litle="自我介绍">自我介绍</a>
