--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <link rel="stylesheet" href="chaolianji.css">
 <link rel="stylesheet" href="shuipingxian.css">
 
+<style>
+h1 {
+  color: red;
+  transition: color 2s;
+}
+h1:hover {
+  color: blue;
+}
+</style>
+
 <div style="text-align:center">
  <h1 style="font-family:宋体;color:white">Hi!</h1>
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
