--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1:hover {
 </style>
 
 <div style="text-align:center">
- <h1 style="font-family:宋体;color:white">Hi!</h1>
+ <h1 style="">Hi!</h1>
 <h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
 <h3 style="font-family:宋体;color:white">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
