--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@ h1 {
   transition: color 2s;
 }
 h1:hover {
-  color: blue;
+  color: aqua;
+}
+h3 {
+  color: white;
+  transition: color 2s;
+}
+h1:hover {
+  color: aqua;
 }
 </style>
 
 <div style="text-align:center">
  <h1 style="">Hi!</h1>
-<h1 style="font-family:宋体;color:white">这里是kj23和mjh的网站</h1>
+<h1 style="">这里是kj23和mjh的网站</h1>
 <h3 style="font-family:宋体;color:white">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
 <h2 style="font-family:宋体;color:white">开发中……</h2>
