--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@ h3 {
 h1:hover {
   color: aqua;
 }
+h1 {
+  color: white;
+  transition: color 2s;
+}
+h2:hover {
+  color: aqua;
+}
 </style>
 
 <div style="text-align:center">
  <h1 style="">Hi!</h1>
 <h1 style="">这里是kj23和mjh的网站</h1>
-<h3 style="font-family:宋体;color:white">作者邮箱:18369898058@163.com</div>
+<h3 style="">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
-<h2 style="font-family:宋体;color:white">开发中……</h2>
+<h2 style="">开发中……</h2>
 <div style="text-align:center">
 <s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
