--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ h2:hover {
 <h1 style="">这里是kj23和mjh的网站</h1>
 <h3 style="">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
-<h2 style="">开发中……</h2>
+<h2 style="">隆重介绍下一个项目:TYsystem!(天云系统)</h2>
 <div style="text-align:center">
 <s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
