--- a/index.html
+++ b/index.html
@@ -46,3 +46,5 @@ h2:hover {
 <a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
 <br/>
 <a href="https://kjmjh.github.io/jieshao.html" litle="自我介绍">自我介绍</a>
+<br/>
+<a href="https://kjmjh.github.io/MJH/index.html" litle="留言板">留言板</a>
