--- a/index.html
+++ b/index.html
@@ -48,3 +48,5 @@ h2:hover {
 <a href="https://kjmjh.github.io/jieshao.html" litle="自我介绍">自我介绍</a>
 <br/>
 <a href="https://kjmjh.github.io/MJH/index.html" litle="留言板">留言板</a>
+<br/>
+<a href="https://kjmjh.github.io/MJH/musichtml.html" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
