--- a/index.html
+++ b/index.html
@@ -50,3 +50,5 @@ h2:hover {
 <a href="https://kjmjh.github.io/MJH/index.html" litle="留言板">留言板</a>
 <br/>
 <a href="https://kjmjh.github.io/MJH/musichtml.html" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
+<br/>
+<a href="https://kjmjh.github.io/MJH/3dmfhtml.html" litle="3D魔方">3D魔方（搬运）</a>
