--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@ h2:hover {
 <br/>
 <a href="https://kjmjh.github.io/MJH/musichtml.html" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
 <br/>
-<a href="https://kjmjh.github.io/MJH/3dmfhtml.html" litle="3D魔方">3D魔方（搬运）</a>
+<a href="https://kjmjh.github.io/MJH/3dmf.html" litle="3D魔方">3D魔方（搬运）</a>
