--- a/index.html
+++ b/index.html
@@ -52,3 +52,5 @@ h2:hover {
 <a href="https://kjmjh.github.io/MJH/musichtml.html" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
 <br/>
 <a href="https://kjmjh.github.io/MJH/3dmf.html" litle="3D魔方">3D魔方（搬运）</a>
+<br/>
+<a href="https://kjmjh.github.io/kj" litle="kj23的主页">kj23的主页</a>
