--- a/index.html
+++ b/index.html
@@ -54,3 +54,5 @@ h2:hover {
 <a href="https://kjmjh.github.io/MJH/3dmf.html" litle="3D魔方">3D魔方（搬运）</a>
 <br/>
 <a href="https://kjmjh.github.io/kj" litle="kj23的主页">kj23的主页</a>
+<br/>
+<a href="https://kjmjh.github.io/kj/shadow" litle="shadow of the sun">直击心灵的声音</a>
