--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h2:hover {
 
 <div style="text-align:center">
  <h1 style="">Hi!</h1>
-<h1 style="">这里是kj23和mjh的网站</h1>
+<h1 style="">这里是kj23和mjh的网站(技拙见笑)</h1>
 <h3 style="">作者邮箱:18369898058@163.com</div>
 <div style="text-align:center">
 <h2 style="">隆重介绍下一个项目:TYsystem!(天云系统)</h2>
