--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@ h2 {
 h2:hover {
   color: aqua;
 }
+ul
+{
+list-style-type:none;
+margin:0;
+padding:0;
+padding-top:6px;
+padding-bottom:6px;
+}
+li
+{
+display:inline;
+}
+a:link,a:visited
+{
+font-weight:bold;
+color:#FFFFFF;
+background-color:#98bf21;
+text-align:center;
+padding:6px;
+text-decoration:none;
+text-transform:uppercase;
+}
+a:hover,a:active
+{
+background-color:#7A991A;
+}
 </style>
 
 <div style="text-align:center">
@@ -54,3 +80,9 @@ h2:hover {
 <a href="https://kjmjh.github.io/kj" litle="kj23的主页">kj23的主页</a>
 <br/>
 <a href="https://kjmjh.github.io/kj/shadow" litle="shadow of the sun">直击心灵的声音</a>
+<ul>
+<li><a href="#home">主页</a></li>
+<li><a href="#news">News</a></li>
+<li><a href="#contact">Contact</a></li>
+<li><a href="#about">About</a></li>
+</ul>
