--- a/index.html
+++ b/index.html
@@ -69,20 +69,12 @@ background-color:#7A991A;
 <s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
 <hr color="#00ffff" align="center" size="2" width="600"/>
-<a href="https://kjmjh.github.io/fuyei.html" litle="项目">我（们）的项目</a>
-<br/>
-<a href="https://kjmjh.github.io/jieshao.html" litle="自我介绍">自我介绍</a>
-<br/>
 <a href="https://kjmjh.github.io/MJH/musichtml.html" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
-<br/>
-<a href="https://kjmjh.github.io/MJH/3dmf.html" litle="3D魔方">3D魔方（搬运）</a>
-<br/>
-<a href="https://kjmjh.github.io/kj" litle="kj23的主页">kj23的主页</a>
 <br/>
 <a href="https://kjmjh.github.io/kj/shadow" litle="shadow of the sun">直击心灵的声音</a>
 <ul>
-<li><a href="#home">主页</a></li>
-<li><a href="#news">News</a></li>
-<li><a href="#contact">Contact</a></li>
-<li><a href="#about">About</a></li>
+<li><a href="https://kjmjh.github.io/fuyei.html">项目</a></li>
+<li><a href="https://kjmjh.github.io/kj">kj23</a></li>
+<li><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></li>
+<li><a href="https://kjmjh.github.io/jieshao.html">介绍</a></li>
 </ul>
