--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ a:link,a:visited
 {
 font-weight:bold;
 color:#FFFFFF;
-background-color:#98bf21;
-text-align:center;
+background-color:aqua;
+text-align:left;
 padding:6px;
 text-decoration:none;
 text-transform:uppercase;
