--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ background-color:aqua;
 <s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
 <hr color="#00ffff" align="center" size="2" width="600"/>
-<a href="https://kjmjh.github.io/MJH/musichtml.html" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
+<a href="https://kjmjh.github.io/MJH/musichtml.html";id="a1" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
 <br/>
 <a href="https://kjmjh.github.io/kj/shadow" litle="shadow of the sun">直击心灵的声音</a>
 <ul>
