--- a/index.html
+++ b/index.html
@@ -31,32 +31,7 @@ h2 {
 h2:hover {
   color: aqua;
 }
-ul
-{
-list-style-type:none;
-margin:0;
-padding:0;
-padding-top:6px;
-padding-bottom:12px;
-}
-li
-{
-display:inline;
-}
-a:link,a:visited
-{
-font-weight:bold;
-color:#FFFFFF;
-background-color:aqua;
-text-align:left;
-padding:6px;
-text-decoration:none;
-text-transform:uppercase;
-}
-a:hover,a:active
-{
-background-color:aqua;
-}
+
 </style>
 
 <div style="text-align:center">
@@ -78,3 +53,15 @@ background-color:aqua;
 <li><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></li>
 <li><a href="https://kjmjh.github.io/jieshao.html">介绍</a></li>
 </ul>
+<div class="navbar">
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+        <ul>
+            <li><a href="#">点赞</a></li>
+            <li><a href="#">关注</a></li>
+            <li><a href="#">收藏</a></li>
+            <li><a href="#">评论</a></li>
+            <li><a href="#">分享</a></li>
+        </ul>
+    </div>
