--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="chaolianji.css">
 <link rel="stylesheet" href="shuipingxian.css">
+<link rel="stylesheet" href="ss2.css">
 
 <style>
 h1 {
