--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@ h2:hover {
 <s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
 <div style="text-align:center">
 <hr color="#00ffff" align="center" size="2" width="600"/>
-<a href="https://kjmjh.github.io/MJH/musichtml.html";id="a1" litle="我喜欢你的阴乐">我喜欢的阴乐</a>
-<br/>
-<a href="https://kjmjh.github.io/kj/shadow" litle="shadow of the sun">直击心灵的声音</a>
+<body>
 <div class="navbar">
         <input type="checkbox">
         <span></span>
@@ -56,3 +54,4 @@ h2:hover {
             <li><a href="#">分享</a></li>
         </ul>
     </div>
+     </body>
