--- a/index.html
+++ b/index.html
@@ -1,57 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>kj23和mjh的小站</title>
-<link rel="stylesheet" href="shuipingxian.css">
-<link rel="stylesheet" href="ss2.css">
-
-<style>
-h1 {
-  color: white;
-  transition: color 2s;
-}
-h1:hover {
-  color: aqua;
-}
-h3 {
-  color: white;
-  transition: color 2s;
-}
-h3:hover {
-  color: aqua;
-}
-h2 {
-  color: white;
-  transition: color 2s;
-}
-h2:hover {
-  color: aqua;
-}
-
-</style>
-
-<div style="text-align:center">
- <h1 style="">Hi!</h1>
-<h1 style="">这里是kj23和mjh的网站(技拙见笑)</h1>
-<h3 style="">作者邮箱:18369898058@163.com</div>
-<div style="text-align:center">
-<h2 style="">隆重介绍下一个项目:TYsystem!(天云系统)</h2>
-<div style="text-align:center">
-<s style="font-family:宋体;color:white">唱🎤跳🤺rap🎙篮球🏀!</s>
-<div style="text-align:center">
-<hr color="#00ffff" align="center" size="2" width="600"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>响应式导航栏</title>
+    <link rel="stylesheet" href="./02-响应式导航栏.css">
+</head>
 <body>
-<div class="navbar">
+    <div class="navbar">
         <input type="checkbox">
         <span></span>
         <span></span>
         <ul>
-            <li><a href="#">点赞</a></li>
-            <li><a href="#">关注</a></li>
-            <li><a href="#">收藏</a></li>
-            <li><a href="#">评论</a></li>
-            <li><a href="#">分享</a></li>
+            <li><a href="#">a</a></li>
+            <li><a href="#">b</a></li>
+            <li><a href="#">c</a></li>
+            <li><a href="#">d</a></li>
+            <li><a href="#">e</a></li>
         </ul>
     </div>
-     </body>
+</body>
+</html>
