--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>响应式导航栏</title>
-    <link rel="stylesheet" href="./02-响应式导航栏.css">
+    <title>kj23和mjh的小站</title>
+    <link rel="stylesheet" href="ss2.css">
 </head>
 <body>
     <div class="navbar">
