--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span></span>
         <ul>
             <li><a href="fuyei.html">项目</a></li>
-            <li><a href="#">b</a></li>
+            <li><a href="https://kjmjh.github.io/kj">kj23</a></li>
             <li><a href="#">c</a></li>
             <li><a href="#">d</a></li>
             <li><a href="#">e</a></li>
