--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="fuyei.html">项目</a></li>
             <li><a href="https://kjmjh.github.io/kj">kj23</a></li>
-            <li><a href="#">c</a></li>
+            <li><a href="https://kjmjh.github.io/MJH/3dmf">魔方游戏</a></li>
             <li><a href="#">d</a></li>
             <li><a href="#">e</a></li>
         </ul>
