--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="https://kjmjh.github.io/kj">kj23</a></li>
             <li><a href="https://kjmjh.github.io/MJH/3dmf">魔方游戏</a></li>
             <li><a href="jeishao.html">关于</a></li>
-            <li><a href="#">e</a></li>
+            <li><a href="https://kjmjh.github.io/MJH/musichtml.html">阴乐</a></li>
         </ul>
     </div>
 </body>
