--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="fuyei.html">项目</a></li>
             <li><a href="https://kjmjh.github.io/kj">kj23</a></li>
             <li><a href="https://kjmjh.github.io/MJH/3dmf">魔方游戏</a></li>
-            <li><a href="jeishao.html">关于</a></li>
+            <li><a href="jieshao.html">关于</a></li>
             <li><a href="https://kjmjh.github.io/MJH/musichtml.html">阴乐</a></li>
         </ul>
     </div>
