--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kj23和mjh的小站</title>
     <link rel="stylesheet" href="ss2.css">
+<h1 style="text-align:center">欢迎来到这个糟糕的网站</h1>
+<h1 style="text-align:center">废话不多说<br/>点击下面开始吧</h1>
 </head>
 <body>
     <div class="navbar">
