--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>kj23和mjh的小站</title>
     <link rel="stylesheet" href="ss2.css">
 <h1 style="text-align:center">欢迎来到这个糟糕的网站</h1>
-<h1 style="text-align:center">废话不多说<br/>点击旁边开始吧</h1>
+<h1 style="text-align:center">废话不多说点击旁边开始吧</h1>
 </head>
 <body>
     <div class="navbar">
