--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kj23和mjh的小站</title>
     <link rel="stylesheet" href="ss2.css">
+<style>
+h1
+{
+position:absolute;
+left:100px;
+top:150px
+}
+</style>
+
 <h1 style="text-align:center">欢迎来到这个糟糕的网站</h1><br/>
 <h1 style="text-align:center">废话不多说点击旁边开始吧</h1>
 </head>
