--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ top:150px
 }
 </style>
 
-<h1 style="text-align:center">欢迎来到这个糟糕的网站</h1><br/>
-<h1 style="text-align:center">废话不多说点击旁边开始吧</h1>
+<h1 style="text-align:center">欢迎来到这个糟糕的网站<br/>废话不多说点击旁边开始吧</h1>
 </head>
 <body>
     <div class="navbar">
