--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@ h1
 {
 position:absolute;
 left:325px;
-top:50px
+top:50px;
+text-shadow:2px 2px 2px 2px #c5c7c4
 }
 </style>
 
-<h1 style="text-align:center">欢迎来到这个糟糕的网站<br/>废话不多说点击旁边开始吧</h1>
+<h1 style="text-align:center">欢迎来到这个糟糕的网站<br/>废话不多说点击旁(下)边开始吧</h1>
 </head>
 <body>
     <div class="navbar">
