--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1
 position:absolute;
 left:325px;
 top:50px;
-text-shadow:2px 2px 2px 2px #c5c7c4
+text-shadow:2px 2px 2px 2px #c5c7c4;
 }
 </style>
 
