--- a/index.html
+++ b/index.html
@@ -1,34 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kj23和mjh的小站</title>
-    <link rel="stylesheet" href="ss2.css">
-<style>
-h1
-{
-position:absolute;
-left:290px;
-top:50px;
-text-shadow:2px 2px 2px 2px #c5c7c4;
-}
-</style>
-
-<h1 style="text-align:center">欢迎来到这个糟糕的网站<br/>废话不多说点击旁(下)边开始吧</h1>
-</head>
+<meta charset="utf-8">
+<title>kj23和mjh的小站</title>
+<link rel="stylesheet" href="https://kjmjh.github.io/styles.css">
 <body>
-    <div class="navbar">
-        <input type="checkbox">
-        <span></span>
-        <span></span>
-        <ul>
-            <li><a href="fuyei.html">项目</a></li>
-            <li><a href="https://kjmjh.github.io/kj">kj23</a></li>
-            <li><a href="https://kjmjh.github.io/MJH/3dmf">魔方游戏</a></li>
-            <li><a href="jieshao.html">关于</a></li>
-            <li><a href="https://kjmjh.github.io/MJH/musichtml.html">阴乐</a></li>
-        </ul>
-    </div>
-</body>
-</html>
+<h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站</h1>
