--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
 <link rel="stylesheet" href="https://kjmjh.github.io/styles.css">
+<style>
+h1{
+color:white;
+}
+</style>
 <body>
 <h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站</h1>
