--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <style>
 h1{
 color:white;
-text-shadow: 2px 2px 2px #c8c8c8;
+text-shadow: 2px 2px 2px #c5c7c4;
 }
 </style>
 <body>
-<h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站</h1>
+<h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com
