--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
-<link rel="stylesheet" href="https://kjmjh.github.io/styles.css">
 <style>
 h1{
-color:white;
 text-shadow: 2px 2px 2px #c5c7c4;
 }
 </style>
 <body>
-<h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com
+<h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</h1>
