--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ div
 width:300px;
 height:100px;
 background-color:white;
+box-align:center;
 box-shadow: 2px 2px 2px 2px #c5c7c4;
 border-radius:15px;
 }
