--- a/index.html
+++ b/index.html
@@ -19,4 +19,4 @@ border-radius:15px;
 </style>
 <body>
 <h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</h1>
-<div></div>
+<div></div><div></div>
