--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ background-color:white;
 box-align:center;
 box-shadow: 2px 2px 2px 2px #c5c7c4;
 border-radius:15px;
+white-space: nowrap;
 }
 </style>
 <body>
