--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@ background-color:white;
 box-align:center;
 box-shadow: 2px 2px 2px 2px #c5c7c4;
 border-radius:15px;
-white-space: nowrap;
 }
 </style>
 <body>
 <h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</h1>
-<nobr><div></div><div></div></nobr>
+<CENTER><div></div>
