--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
 <style>
-h1{
+p{
 text-shadow: 2px 2px 2px #c5c7c4;
 }
 div
@@ -18,5 +18,5 @@ border-radius:15px;
 }
 </style>
 <body>
-<h1 style="text-align:center">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</h1>
+<p style="text-align:center;font-size:10vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</p>
 <CENTER><div></div>
