--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>kj23和mjh的小站</title>
 <style>
 p{
+color-white;
 text-shadow: 2px 2px 2px #c5c7c4;
 }
 div
@@ -17,6 +18,6 @@ box-shadow: 2px 2px 2px 2px #c5c7c4;
 border-radius:15px;
 }
 </style>
-<body>
+<body style="background-color:black">
 <p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</p>
 <CENTER><div></div>
