--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@ border-radius:15px;
 }
 </style>
 <body style="background-color:black">
-<p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com</p>
+<p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com<br/>下滑看看吧…</p>
 <CENTER><div></div>
