--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@ background-color:white;
 box-align:center;
 border-radius:15px;
 }
+a
+{
+text-align:center;
+}
 </style>
 <body style="background-color:black">
 <p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com<br/>下滑看看吧…</p>
-<CENTER><div><a href="https://kjmjh.github.io/fuye.html"></div>
+<CENTER><div><a href="https://kjmjh.github.io/fuyei.html">项目</a></div>
