--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@ border-radius:15px;
 }
 a
 {
-text-align:center;
-top:20px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 </style>
 <body style="background-color:black">
