--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ div
 width:300px;
 height:100px;
 display: flex;
+justify-content: center;
+align-items: center;
 background-color:white;
 box-align:center;
 border-radius:15px;
