--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@ border-radius:15px;
 }
 a
 {
-
+display:block;
+font-weight:bold;
+font-size:14px;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+color:#FFFFFF;
+background-color:aqua;
+width:120px;
+text-align:center;
+padding:4px;
+text-decoration:none;
 }
 </style>
 <body style="background-color:black">
