--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ width:120px;
 text-align:center;
 padding:4px;
 text-decoration:none;
+border-radius:7px;
 }
 </style>
 <body style="background-color:black">
