--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ font-family:Verdana, Arial, Helvetica, sans-serif;
 color:#FFFFFF;
 background-color:aqua;
 width:200px;
+height:70px
 text-align:center;
 padding:4px;
 text-decoration:none;
