--- a/index.html
+++ b/index.html
@@ -38,3 +38,4 @@ border-radius:7px;
 <p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:18369898058@163.com<br/>下滑看看吧…</p>
 <CENTER><div><a href="https://kjmjh.github.io/fuyei.html">项目</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/kj">kj23</a></div></CENTER>
+<CENTER><div><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></div></CENTER>
