--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>kj23和mjh的小站</title>
+<link rel="shortcut icon" href="favicon.ico">
 <style>
 p{
 color:white;
