--- a/114514.html
+++ b/114514.html
@@ -4,3 +4,14 @@
 <meta charset="utf-8">
 <title>kj23和mjh的小站（彩蛋）</title>
 <link rel="shortcut icon" href="favicon.ico">
+<style>
+body
+{
+display: flex;
+justify-content: center;
+align-items: center;
+background-color:#00BFFF
+}
+</style>
+<body>
+<p style:"font-size:5vh">海内存知己，天涯若比邻。</p>
