--- a/114514.html
+++ b/114514.html
@@ -14,4 +14,5 @@ background-color:#00BFFF
 }
 </style>
 <body>
-<p style="text-color:white;font-size:5vh">海内存知己，天涯若比邻。</p>
+<p style="color:white;font-size:5vh">海内存知己，天涯若比邻。</p>
+</body>
