--- a/114514.html
+++ b/114514.html
@@ -12,7 +12,13 @@ justify-content: center;
 align-items: center;
 background-color:#00BFFF
 }
+div
+{
+display: flex;
+justify-content: center;
+align-items: center;
+}
 </style>
 <body>
-<p style="color:white;font-size:5vh">海内存知己，天涯若比邻。</p>
+<div><p style="color:white;font-size:5vh">海内存知己，天涯若比邻。</p><div>
 </body>
