--- a/114514.html
+++ b/114514.html
@@ -12,13 +12,9 @@ justify-content: center;
 align-items: center;
 background-color:#00BFFF
 }
-div
-{
-display: flex;
-justify-content: center;
-align-items: center;
-}
 </style>
 <body>
-<div><p style="color:white;font-size:5vh">海内存知己，天涯若比邻。</p><div>
+<div style="display: flex; alignitems: center; justifycontent: center; height: 100px;">
+  海内存知己，天涯若比邻。
+</div>
 </body>
