--- a/114514.html
+++ b/114514.html
@@ -11,7 +11,7 @@ background-color:#00BFFF
 }
 </style>
 <body>
-<div style="display: flex; alignitems: center; justifycontent: center; height: 100px;">
+<div style="lineheight: 100px; textalign: center;">
   海内存知己，天涯若比邻。
 </div>
 </body>
