--- a/114514.html
+++ b/114514.html
@@ -11,7 +11,5 @@ background-color:#00BFFF
 }
 </style>
 <body>
-<div style="lineheight: 100px; textalign: center;">
-  海内存知己，天涯若比邻。
-</div>
+<p style="color:white;font-size:5vh;text-align:center">海内存知己，天涯若比邻。</p>
 </body>
