--- a/index.html
+++ b/index.html
@@ -41,4 +41,5 @@ border-radius:7px;
 <CENTER><div><a href="https://kjmjh.github.io/kj">kj23</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></div></CENTER>
 <p style="text-align:center;font-size:7vh">没错<br/>如此糟糕的网站也有彩蛋<br/>猜出答案吧<br/>在网址后加上:(答案).html<br/>即可访问<br>(当然也可以作弊:查看我的GitHub仓库)</p>
-<p style="text-align:center">问题1:114514</p>
+<p style="text-align:center;font-size:5vh">问题1:114514</p>
+<p style="text-align:center;font-size:5vh">
