--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@ border-radius:7px;
 <p style="text-align:center;font-size:7vh">没错<br/>如此糟糕的网站也有彩蛋<br/>猜出答案吧<br/>在网址后加上:(答案).html<br/>即可访问<br>(当然也可以作弊:查看我的GitHub仓库)</p>
 <p style="text-align:center;font-size:5vh">问题1:逸一时，误一世</p>
 <p style="text-align:center;font-size:5vh">问题2:(提示:下载图片？改后缀？)</p>
-<a href="https://kjmjh.github.io/kj23.jpg">我是图片</a>
+<a style="text-align:center" href="https://kjmjh.github.io/kj23.jpg">我是图片</a>
