--- a/qaqwer.html
+++ b/qaqwer.html
@@ -4,4 +4,28 @@
 <meta charset="utf-8">
 <title>kj23和mjh的小站(彩蛋)</title>
 <link rel="shortcut icon" href="favicon.ico">
-<h1 style="text-align:center">彩蛋更新中……</h1>
+<style>
+h1
+{
+font-size:7vh;
+text-align:center;
+}
+a
+{
+text-align:center;
+}
+</style>
+
+<p>下面是……一些集合</p>
+<hr>
+<p>实用网站集合</p>
+<a href="http://www.shadiao.pro">沙雕导航网</a>
+<a href="https://uutool.cn/">UU工具</a>
+<a href="https://greasyfork.org/zh-CN/scripts?page=2">脚本</a>
+<a href="https://www.linshiyou.com">临时邮箱</a>
+<a href="https://favicon.net.cn/">在线Favicon图标制作</a>
+<p>在线小游戏集合<p>
+<a href="https://www.linerider.com/">Line Rider</a>
+<a href="https://nazo.one-story.cn/">Nazo Game</a>
+<a href="http://lonelystar.org/plantsvszombies.htm">在线植物大战僵尸(1)</a>
+<a href="http://pvz.56wan.com/">在线植物大战僵尸（2）</a>
