--- a/qaqwer.html
+++ b/qaqwer.html
@@ -29,3 +29,7 @@ text-align:center;
 <a href="https://nazo.one-story.cn/">Nazo Game</a>
 <a href="http://lonelystar.org/plantsvszombies.htm">在线植物大战僵尸(1)</a>
 <a href="http://pvz.56wan.com/">在线植物大战僵尸（2）</a>
+<p>应用集合(pc安卓都有)</p>
+<a href="via-release-cn.apk">via浏览器(安卓)</a>
+<a href="Plain Craft Launcher 2.exe">pcl2我的世界启动器(windows)</a>
+<a href="MT2.16.5.apk">MT文件管理器(安卓)</a>
