--- a/qaqwer.html
+++ b/qaqwer.html
@@ -5,7 +5,7 @@
 <title>kj23和mjh的小站(彩蛋)</title>
 <link rel="shortcut icon" href="favicon.ico">
 <style>
-h1
+p
 {
 font-size:7vh;
 text-align:center;
@@ -33,3 +33,10 @@ text-align:center;
 <a href="via-release-cn.apk">via浏览器(安卓)</a>
 <a href="Plain Craft Launcher 2.exe">pcl2我的世界启动器(windows)</a>
 <a href="MT2.16.5.apk">MT文件管理器(安卓)</a>
+<p>网页云电脑<p>
+<a href="http://www.windows93.net/">在线windows93</a>
+<a href="https://tjy-gitnub.github.io/win12/desktop.html">windows12网页版</a>
+<p>其他……</p>
+<a href="https://yemao-zi.github.io/pages/2f1aea/">夜猫子知识站</a>
+<a href="https://tjy-gitnub.github.io">星源</a>
+<p>更多的正在更新中…<br/>————kj23<br/><div style="text-align:center">2023年八月</div></p>
