--- a/qaqwer.html
+++ b/qaqwer.html
@@ -19,11 +19,12 @@ text-align:center;
 <p>下面是……一些集合</p>
 <hr>
 <p>实用网站集合</p>
-<a href="http://www.shadiao.pro">沙雕导航网</a>
+<CENTER><a href="http://www.shadiao.pro">沙雕导航网</a>
 <a href="https://uutool.cn/">UU工具</a>
 <a href="https://greasyfork.org/zh-CN/scripts?page=2">脚本</a>
 <a href="https://www.linshiyou.com">临时邮箱</a>
 <a href="https://favicon.net.cn/">在线Favicon图标制作</a>
+</CENTER>
 <p>在线小游戏集合<p>
 <a href="https://www.linerider.com/">Line Rider</a>
 <a href="https://nazo.one-story.cn/">Nazo Game</a>
