--- a/qaqwer.html
+++ b/qaqwer.html
@@ -25,7 +25,7 @@ text-align:center;
 <a href="https://www.linshiyou.com">临时邮箱</a>
 <a href="https://favicon.net.cn/">在线Favicon图标制作</a>
 </CENTER>
-<p>在线小游戏集合<p>
+<p>在线小游戏集合</p>
 <a href="https://www.linerider.com/">Line Rider</a>
 <a href="https://nazo.one-story.cn/">Nazo Game</a>
 <a href="http://lonelystar.org/plantsvszombies.htm">在线植物大战僵尸(1)</a>
@@ -35,7 +35,7 @@ text-align:center;
 <a href="Plain Craft Launcher 2.exe">pcl2我的世界启动器(windows)</a>
 <a href="MT2.16.5.apk">MT文件管理器(安卓)</a>
 </CENTER>
-<p>网页云电脑<p>
+<p>网页云电脑</p>
 <a href="http://www.windows93.net/">在线windows93</a>
 <a href="https://tjy-gitnub.github.io/win12/desktop.html">windows12网页版</a>
 <p>其他……</p>
