--- a/qaqwer.html
+++ b/qaqwer.html
@@ -26,19 +26,22 @@ text-align:center;
 <a href="https://favicon.net.cn/">在线Favicon图标制作</a>
 </CENTER>
 <p>在线小游戏集合</p>
-<a href="https://www.linerider.com/">Line Rider</a>
+<CENTER><a href="https://www.linerider.com/">Line Rider</a>
 <a href="https://nazo.one-story.cn/">Nazo Game</a>
 <a href="http://lonelystar.org/plantsvszombies.htm">在线植物大战僵尸(1)</a>
 <a href="http://pvz.56wan.com/">在线植物大战僵尸（2）</a>
+</CENTER>
 <p>应用集合(pc安卓都有)</p>
 <CENTER><a href="via-release-cn.apk">via浏览器(安卓)</a>
 <a href="Plain Craft Launcher 2.exe">pcl2我的世界启动器(windows)</a>
 <a href="MT2.16.5.apk">MT文件管理器(安卓)</a>
 </CENTER>
 <p>网页云电脑</p>
-<a href="http://www.windows93.net/">在线windows93</a>
+<CENTER><a href="http://www.windows93.net/">在线windows93</a>
 <a href="https://tjy-gitnub.github.io/win12/desktop.html">windows12网页版</a>
+</CENTER>
 <p>其他……</p>
-<a href="https://yemao-zi.github.io/pages/2f1aea/">夜猫子知识站</a>
+<CENTER><a href="https://yemao-zi.github.io/pages/2f1aea/">夜猫子知识站</a>
 <a href="https://tjy-gitnub.github.io">星源</a>
+</CENTER>
 <p>更多的正在更新中…<br/>————kj23<br/><div style="text-align:center">2023年八月</div></p>
