--- a/fuyei.html
+++ b/fuyei.html
@@ -142,10 +142,16 @@
               </div>
              <div class="project-card" onclick="toggleCard(this)">
             <h3>天云系统</h3>
-            <p>开发中……</p>
+            <p>新版上线啦!</p>
             <div class="additional-info">
                 <p>开发者:我自己</p>
-               <a class="button" href="http://kjmjh.github.io/kj23">项目链接</a>
+               <a class="button" href="http://kjmjh.github.io/tysystem">项目链接</a>
+            </div>
+            <h3>图骗</h3>
+            <p>好康的</p>
+            <div class="additional-info">
+                <p>开发者:我自己、lingbopro</p>
+               <a class="button" href="http://github.com/kjmjh/TOT">在github中查看</a>
             </div>
     </div>
     <!-- 添加更多项目卡片 -->
