--- a/fuyei.html
+++ b/fuyei.html
@@ -147,6 +147,7 @@
                 <p>开发者:我自己</p>
                <a class="button" href="http://kjmjh.github.io/tysystem">项目链接</a>
             </div>
+           <div class="project-card" onclick="toggleCard(this)">
             <h3>图骗</h3>
             <p>好康的</p>
             <div class="additional-info">
