--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ text-decoration:none;
 border-radius:7px;
 }
 </style>
+</head>
 <body style="background-color:black">
 <p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:kj23qaq@outlook.com<br/>下滑看看吧…</p>
 <CENTER><div><a href="https://kjmjh.github.io/fuyei.html">项目</a></div></CENTER>
@@ -44,3 +45,20 @@ border-radius:7px;
 <p style="text-align:center;font-size:5vh">问题1:逸一时，误一世</p>
 <p style="text-align:center;font-size:5vh">问题2:(提示:下载APK？改后缀？)</p>
 <CENTER><a style="text-align:center"href="https://kjmjh.github.io/kj23.apk">我是apk</a></CENTER>
+<script src="https://giscus.app/client.js"
+        data-repo="kjmjh/kjmjh.github.io"
+        data-repo-id="R_kgDOL25cfA"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOL25cfM4Cip-1"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="noborder_gray"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
+</body>
+</html>
