--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ border-radius:7px;
 <CENTER><div><a href="https://kjmjh.github.io/fuyei.html">项目</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/kj">kj23</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></div></CENTER>
-<b>ohhhhhhhhhhh<br>ohhhhhhhhhhhhhhhhh<br>ohhhhhhhhhhhhh
+<b>ohhhhhhhhhhh<br>ohhhhhhhhhhhhhhhhh<br>ohhhhhhhhhhhhh</b>
 <body style="background-color:black">
 <script src="https://giscus.app/client.js"
         data-repo="kjmjh/kjmjh.github.io"
