--- a/index.html
+++ b/index.html
@@ -36,26 +36,11 @@ border-radius:7px;
 }
 </style>
 </head>
+<body style="background-color:black">
 <p style="text-align:center;font-size:7vh">幸会👋<br/>欢迎来到这个糟糕的网站<br/>网站由kj23一人制作<br/>邮箱:kj23qaq@outlook.com<br/>下滑看看吧…</p>
 <CENTER><div><a href="https://kjmjh.github.io/fuyei.html">项目</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/kj">kj23</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></div></CENTER>
-<b>ohhhhhhhhhhh<br>ohhhhhhhhhhhhhhhhh<br>ohhhhhhhhhhhhh</b>
-<body style="background-color:black">
-<script src="https://giscus.app/client.js"
-        data-repo="kjmjh/kjmjh.github.io"
-        data-repo-id="R_kgDOL25cfA"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOL25cfM4Cip-1"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="noborder_gray"
-        data-lang="zh-CN"
-        crossorigin="anonymous"
-        async>
-</script>
+<CENTER><div><a href="https://kjmjh.github.io/pl.html">评论</a></div></CENTER>
 </body>
 </html>
