--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ border-radius:7px;
 
             if (!pageExists) {
                 // 页面不存在，重定向到404页面
-                window.location.href = "http://yourdomain.com/404.html";
+                window.location.href = "https://kjmjh.github.io/404.html";
             }
         }
 
