--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@ border-radius:7px;
 <CENTER><div><a href="https://kjmjh.github.io/kj">kj23</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/pl.html">评论</a></div></CENTER>
+<p style="text-align:center;font-size:7vh">我是不是该把这个破玩意儿改一下了？</p>
 </body>
 </html>
