--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@ border-radius:7px;
 <CENTER><div><a href="https://kjmjh.github.io/pl.html">评论</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/js.html">??!!</a></div></CENTER>
 <p style="text-align:center;font-size:7vh">我是不是该把这个破玩意儿改一下了？</p>
-<div style="color:black">--.../...../-----/---../----./-..../-..../----./---..</div>
+<div style="color:black" class="vc">--.../...../-----/---../----./-..../-..../----./---..</div>
 </body>
 </html>
