--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ padding:4px;
 text-decoration:none;
 border-radius:7px;
 }
+.vc
+{
+background-color:black;
+}
 </style>
 </head>
 <body style="background-color:black">
